# automarketing

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml
.github/workflows/: docs-validation.yml
alembic/: env.py
alembic/versions/: 20260312_0001_initial_schema.py  20260312_0002_visibility_intelligence.py
automarketing/: __init__.py  app.py  db.py  db_models.py  mcp_contract_validator.py  mcp_server.py  models.py  repository.py  settings.py  sql_repository.py  visibility_adapters.py  visibility_service.py
automarketing/templates/: application_detail.html  index.html
docs/: DESIGN.md  DOC_GARDENING.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  index.md  portfolio-control-plane-architecture.md  template.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: 2026-03-12-control-plane-foundation.md  README.md
docs/exec-plans/completed/: README.md
docs/product-specs/: index.md  portfolio-automarketing-control-plane.md  template.md
docs/references/: design-system-reference-llms.txt  index.md  mcp-application-contract.md  nixpacks-llms.txt  skills-and-automations.md  uv-llms.txt
examples/onboarding/: reeldna-ai-visibility.json  reeldna-ai.json
scripts/: seed_demo_data.py  validate_docs.py  validate_mcp_contract.py
tests/: test_app.py  test_db.py  test_mcp_contract_validator.py  test_sql_repository.py  test_visibility_adapters.py  test_visibility_service.py
(+3 files in other folders)
