[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "automarketing-control-plane"
version = "0.1.0"
description = "Automarketing control plane for a portfolio of first-party applications."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.18.4,<2",
  "fastapi>=0.135.1,<0.136",
  "httpx>=0.28.1,<0.29",
  "jinja2>=3.1.6,<4",
  "mcp>=1.26.0,<2",
  "pydantic-settings>=2.13.1,<3",
  "psycopg[binary]>=3.3.3,<3.4",
  "sqlalchemy>=2.0.48,<2.1",
  "uvicorn>=0.41.0,<0.42",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2,<10",
]

[tool.setuptools.packages.find]
include = ["automarketing*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -s"
